tests/cases/smoke/invalid/matrix_bad_mul.ty
var bad = Matrix([1, 2]) * Matrix([3, 4])
